--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
     "@angular/forms": "~11.2.5",
+    "@angular/localize": "~11.2.5",
     "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.4.1",
-    "jquery": "^3.6.0",
     "popper": "^1.0.1",
-    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
