--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap-icons": "^1.4.1",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.11",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
